--- a/public/package.json
+++ b/public/package.json
@@ -7,7 +7,8 @@
     "node": "~0.8.1"
   },
   "dependencies": {
-      "nib": "0.5.0"
+      "nib": "0.5.0",
+      "bcrypt": "0.7.0"
   },
   "devDependencies": {},
   "directories": {
