--- a/public/package.json
+++ b/public/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
       "nib": "0.5.0",
-      "bcrypt": "0.7.0"
+      "bcrypt": "0.7.0",
+      "nodemailer": "0.3.21"
   },
   "devDependencies": {},
   "directories": {
